--- a/public/sass/pages/_laser.scss
+++ b/public/sass/pages/_laser.scss
@@ -13,7 +13,7 @@
         left: 20px;
         top: 20px;
         width: 182px;
-        z-index: $max-z-index;
+        z-index: $max-z-index - 1;
 
         .action-buttons {
             .btn {
@@ -87,7 +87,7 @@
         right: 25px;
         top: 20px;
         width: 214px;
-        z-index: $max-z-index;
+        z-index: $max-z-index - 1;
 
         .control:nth-child(odd) {
             margin: 0 0 4px 0;
